# AuthFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: backend_pre_start.py  initial_data.py  main.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 2025_04_13_2316-d2bea20d0760_first.py
app/api/: __init__.py  deps.py
app/api/routes/: auth.py
app/core/: config.py  security.py
app/database/: crud.py  db.py  redis_db.py
app/email-templates/: forgot-password.html  verify-email.html
app/models/: __init__.py  base.py
app/schemas/: user.py
app/utils/: email_helpers.py
scripts/: prestart.sh
