[project]
name = ""
version = "0.0.1"
requires-python = "~=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116",
    "uvicorn[standart]>=0.34.1,<0.35",
    "pydantic[email]>=2.11.3,<3",
    "pydantic-settings>=2.8.1,<3",
    "asyncpg>=0.30.0,<0.31",
    "pyjwt[crypto]>=2.10.1,<3",
    "bcrypt>=4.3.0,<5",
    "alembic>=1.15.2,<2",
    "redis>=5.2.1,<6",
    "sqlalchemy[asyncio]>=2.0.40",
    "tenacity>=9.1.2",
    "aiosmtplib>=4.0.0",
]

[dependency-groups]
dev = ["black>=25.1.0,<26"]

[tool.uv]
package = false

